--- a/Develop/server/.env
+++ b/Develop/server/.env
@@ -1,4 +1,4 @@
 DB_NAME='kanban_db'
-DB_USER=''
-DB_PASSWORD=''
-JWT_SECRET_KEY=''
+DB_USER='postgres'
+DB_PASSWORD='1234'
+JWT_SECRET_KEY='secret_key'
